--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ android {
 }
 
 dependencies {
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
