--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+//    id 'kotlin-android-extensions'
 }
 
 android {
@@ -35,6 +36,9 @@ android {
 }
 
 dependencies {
+//    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'com.google.android.material:material:1.1.0-alpha10'
+//    implementation 'com.google.android.material:material:1.2.1'
     implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
